# just-a-db

./: '  .bazelrc  .clang-format  MODULE.bazel  README.md  WORKSPACE  default.nix  shell.nix
.github/workflows/: main.yml
justadb/: BUILD  database.h  ddl.cpp  ddl.h  dml.cpp  dml.h  main.cpp  query_exec.cpp  utils.h
testing/: BUILD  ddl_test.cpp  dml_test.cpp  test_main.cpp
